feat: prepare outfitter CLI for npm and homebrew publishing
- Change package name from @outfitter/cli to outfitter
- Fix ES module imports for fs-extra compatibility
- Fix build issues in contracts and contracts-zod packages
- Add GitHub Actions workflow for npm publishing
- Add Homebrew formula structure
- Update documentation to reflect new package name

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@outfitter/cli",
+  "name": "outfitter",
   "version": "0.1.0",
   "description": "Command-line tool for equipping your development journey with configurations and fieldguides",
   "type": "module",
