--- a/packages/contracts-zod/package.json
+++ b/packages/contracts-zod/package.json
@@ -16,7 +16,7 @@
     "vitest.config.ts"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && tsc --emitDeclarationOnly",
     "dev": "tsup --watch",
     "test": "vitest",
     "type-check": "tsc --noEmit"
