--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx src/index.ts",
+    "lint": "eslint .",
     "prepare": "npm run build",
     "test": "vitest",
     "type-check": "tsc --noEmit"
