--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -15,8 +15,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "composite": true,
-    "preserveShebang": true
+    "composite": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
