feat: add monorepo support and link related packages
- Link @outfitter/contracts with @outfitter/contracts-zod for coordinated versioning
- Link @outfitter/eslint-config with @outfitter/typescript-config for consistency
- Add automatic workspace detection to CLI equip command
- Add --filter option to target specific workspace packages
- Add --workspace-root option for explicit workspace root installation
- Fix ERR_PNPM_ADDING_TO_ROOT error in monorepo environments

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,10 @@
   "changelog": "@changesets/cli/changelog",
   "commit": false,
   "fixed": [],
-  "linked": [],
+  "linked": [
+    ["@outfitter/contracts", "@outfitter/contracts-zod"],
+    ["@outfitter/eslint-config", "@outfitter/typescript-config"]
+  ],
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
