refactor(markdown-medic): change CLI command from mdlint to mdic
- Rename CLI command to 'mdic' (Markdown Inspect & Correct)
- Update config file name from .mdlint.yaml to .mdic.yaml
- Update all documentation to reflect new command name
- Better aligned with package name 'markdown-medic'

--- a/packages/markdown-medic/package.json
+++ b/packages/markdown-medic/package.json
@@ -14,7 +14,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "mdlint": "./dist/cli.js"
+    "mdic": "./dist/cli.js"
   },
   "files": [
     "dist",
@@ -28,12 +28,9 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
-    "markdownlint": "^0.36.1",
     "markdownlint-cli2": "^0.15.0",
     "chalk": "^5.4.1",
-    "commander": "^12.1.0",
-    "glob": "^11.0.0",
-    "js-yaml": "^4.1.0"
+    "commander": "^12.1.0"
   },
   "devDependencies": {
     "@outfitter/typescript-config": "workspace:*",
