refactor(md-medic): rename package and update config file name
- Rename package from @outfitter/markdown-medic to @outfitter/md-medic
- Keep project name as 'Markdown Medic' and CLI command as 'mdic'
- Change config file from .mdic.yaml to .mdic.config.yaml
- Update all documentation and references
- Rename package directory from markdown-medic to md-medic

--- a/packages/md-medic/package.json
+++ b/packages/md-medic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@outfitter/markdown-medic",
+  "name": "@outfitter/md-medic",
   "version": "1.0.4",
   "description": "Opinionated markdown linting and formatting for healthy documentation",
   "keywords": [
@@ -51,7 +51,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/outfitter-dev/monorepo.git",
-    "directory": "packages/markdown-medic"
+    "directory": "packages/md-medic"
   },
   "bugs": {
     "url": "https://github.com/outfitter-dev/monorepo/issues"
