style(markdown-medic): fix formatting issues (trailing commas and spaces)

--- a/packages/markdown-medic/.markdownlint-cli2.yaml
+++ b/packages/markdown-medic/.markdownlint-cli2.yaml
@@ -24,7 +24,7 @@ ignores:
   - build/**
   - coverage/**
   - CHANGELOG.md
-  - "*.min.md"
+  - '*.min.md'
 terminology:
   - incorrect: NPM
     correct: npm
