--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -9,11 +9,11 @@ default: true
 
 # Rule: MD003 - configured with options
 MD003:
-  style: "atx"
+  style: 'atx'
 
 # Rule: MD004 - configured with options
 MD004:
-  style: "dash"
+  style: 'dash'
 
 # Rule: MD007 - configured with options
 MD007:
@@ -28,7 +28,7 @@ MD024:
 
 # Rule: MD029 - configured with options
 MD029:
-  style: "ordered"
+  style: 'ordered'
 
 # Rule: MD033 - disabled
 MD033: false
@@ -41,42 +41,42 @@ MD043: false
 
 # Rule: MD046 - configured with options
 MD046:
-  style: "fenced"
+  style: 'fenced'
 
 # Files and patterns to ignore
 # Supports glob patterns like "docs/legacy/**"
 ignores:
-  - "node_modules/**"
-  - ".git/**"
-  - "dist/**"
-  - "build/**"
-  - "coverage/**"
-  - "CHANGELOG.md"
-  - "*.min.md"
+  - 'node_modules/**'
+  - '.git/**'
+  - 'dist/**'
+  - 'build/**'
+  - 'coverage/**'
+  - 'CHANGELOG.md'
+  - '*.min.md'
 
 # Custom terminology corrections
 # Format: [{ incorrect: "bad", correct: "good" }]
 terminology:
-  - incorrect: "NPM"
-    correct: "npm"
-  - incorrect: "Javascript"
-    correct: "JavaScript"
-  - incorrect: "Typescript"
-    correct: "TypeScript"
-  - incorrect: "VSCode"
-    correct: "VS Code"
-  - incorrect: "MacOS"
-    correct: "macOS"
-  - incorrect: "Github"
-    correct: "GitHub"
-  - incorrect: "gitlab"
-    correct: "GitLab"
-  - incorrect: "nodejs"
-    correct: "Node.js"
-  - incorrect: "react native"
-    correct: "React Native"
+  - incorrect: 'NPM'
+    correct: 'npm'
+  - incorrect: 'Javascript'
+    correct: 'JavaScript'
+  - incorrect: 'Typescript'
+    correct: 'TypeScript'
+  - incorrect: 'VSCode'
+    correct: 'VS Code'
+  - incorrect: 'MacOS'
+    correct: 'macOS'
+  - incorrect: 'Github'
+    correct: 'GitHub'
+  - incorrect: 'gitlab'
+    correct: 'GitLab'
+  - incorrect: 'nodejs'
+    correct: 'Node.js'
+  - incorrect: 'react native'
+    correct: 'React Native'
 
 # Additional custom rules to load
 # Paths to JavaScript files exporting markdownlint rules
 customRules:
-  - "./consistent-terminology.js"
+  - './consistent-terminology.js'
