--- a/packages/baselayer/package.json
+++ b/packages/baselayer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@outfitter/baselayer",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Declarative development toolchain configuration orchestrator - everything you need, nothing you don't",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -17,7 +17,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && tsc --emitDeclarationOnly",
     "dev": "tsup --watch",
     "test": "vitest",
     "test:run": "vitest --run",
