--- a/packages/baselayer/tsconfig.json
+++ b/packages/baselayer/tsconfig.json
@@ -19,7 +19,7 @@
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules"],
+  "exclude": ["dist", "node_modules", "src/**/*.test.ts", "src/**/*.test.tsx"],
   "references": [
     {
       "path": "../contracts/typescript"
