--- a/packages/remark-config/tsconfig.json
+++ b/packages/remark-config/tsconfig.json
@@ -5,9 +5,7 @@
     "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "composite": true,
-    "incremental": true
+    "sourceMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
