fix: resolve remaining linting errors and remove duplicate file
- Replace Function type with explicit function signature in detection.test.ts
- Replace delete operator with assignment to undefined in rightdown format.ts
- Remove duplicate consistent-terminology.js from root
- Update markdownlint config to use correct path

--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -79,4 +79,4 @@ terminology:
 # Additional custom rules to load
 # Paths to JavaScript files exporting markdownlint rules
 customRules:
-  - './consistent-terminology.js'
+  - './packages/rightdown/dist/rules/consistent-terminology.js'
