feat(formatting): add intelligent code block formatting in markdown
- Create remark plugin that formats code blocks with appropriate tools
- Route TypeScript/JavaScript to Biome when available (keeping it tight)
- Route other languages to Prettier when available
- Automatically configure based on detected formatters
- Only activate when both remark and code formatters are available
- Add necessary dependencies (unified, unist-util-visit, mdast)
- Update build config to include remark plugin
- Document automatic code block formatting in README

This enables the best tool for each job approach without bloating projects
that don't need it, using peer dependencies and intelligent detection.

--- a/packages/formatting/package.json
+++ b/packages/formatting/package.json
@@ -39,6 +39,9 @@
     "@outfitter/prettier-config": "workspace:*",
     "@outfitter/remark-config": "workspace:*",
     "commander": "^12.0.0",
+    "mdast": "^3.0.0",
+    "unified": "^11.0.0",
+    "unist-util-visit": "^5.0.0",
     "yaml": "^2.3.4",
     "zod": "^3.22.4"
   },
