--- a/packages/formatting/package.json
+++ b/packages/formatting/package.json
@@ -39,7 +39,6 @@
     "@outfitter/prettier-config": "workspace:*",
     "@outfitter/remark-config": "workspace:*",
     "commander": "^12.0.0",
-    "mdast": "^3.0.0",
     "unified": "^11.0.0",
     "unist-util-visit": "^5.0.0",
     "yaml": "^2.3.4",
@@ -47,6 +46,7 @@
   },
   "devDependencies": {
     "@outfitter/typescript-config": "workspace:*",
+    "@types/mdast": "^4.0.0",
     "@types/node": "^22.7.4",
     "@vitest/coverage-v8": "^2.1.9",
     "eslint": "^9.29.0",
