feat(formatting): simplify package to leverage Ultracite
- Remove preset system and YAML parsing
- Remove ESLint and Remark generators
- Add init command that runs ultracite init
- Add complementary configs (Prettier, markdownlint, EditorConfig)
- Implement package manager detection
- Update tests for simplified approach

BREAKING CHANGE: Complete rewrite of the formatting package. The 'setup' command
is replaced with 'init', and the package now leverages Ultracite for zero-config
Biome setup instead of managing multiple formatters with presets.

--- a/packages/contracts-zod/package.json
+++ b/packages/contracts-zod/package.json
@@ -7,8 +7,7 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js"
     }
   },
   "files": [
@@ -16,7 +15,7 @@
     "vitest.config.ts"
   ],
   "scripts": {
-    "build": "tsup && tsc --emitDeclarationOnly",
+    "build": "tsup",
     "dev": "tsup --watch",
     "test": "vitest",
     "type-check": "tsc --noEmit"
