--- a/packages/formatting/package.json
+++ b/packages/formatting/package.json
@@ -2,9 +2,8 @@
   "name": "@outfitter/formatting",
   "version": "0.1.0",
   "type": "module",
-  "description": "Lightweight formatting setup tool that orchestrates Prettier, Biome, ESLint, and Remark configurations",
+  "description": "Modern formatting setup that leverages Ultracite (Biome) for JS/TS and complements it with Prettier and markdownlint-cli2",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
     "outfitter-formatting": "./dist/cli.js"
@@ -12,18 +11,15 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js"
     },
     "./cli": {
       "types": "./dist/cli.d.ts",
-      "import": "./dist/cli.mjs",
-      "require": "./dist/cli.js"
+      "import": "./dist/cli.js"
     }
   },
   "files": [
-    "dist",
-    "presets"
+    "dist"
   ],
   "scripts": {
     "build": "tsup",
@@ -33,32 +29,22 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
-    "@outfitter/biome-config": "workspace:*",
     "@outfitter/contracts": "workspace:*",
-    "@outfitter/contracts-zod": "workspace:*",
-    "@outfitter/prettier-config": "workspace:*",
-    "@outfitter/remark-config": "workspace:*",
     "commander": "^12.0.0",
-    "unified": "^11.0.0",
-    "unist-util-visit": "^5.0.0",
-    "yaml": "^2.3.4",
-    "zod": "^3.22.4"
+    "ultracite": "^1.0.0"
   },
   "devDependencies": {
     "@outfitter/typescript-config": "workspace:*",
-    "@types/mdast": "^4.0.0",
     "@types/node": "^22.7.4",
     "@vitest/coverage-v8": "^2.1.9",
-    "eslint": "^9.29.0",
     "tsup": "^8.3.0",
     "typescript": "^5.6.3",
     "vitest": "^2.1.5"
   },
   "peerDependencies": {
     "@biomejs/biome": ">=1.8.0",
-    "eslint": ">=8.0.0",
     "prettier": ">=3.0.0",
-    "remark-cli": ">=12.0.0"
+    "markdownlint-cli2": ">=0.10.0"
   },
   "peerDependenciesMeta": {
     "prettier": {
@@ -67,21 +53,19 @@
     "@biomejs/biome": {
       "optional": true
     },
-    "eslint": {
-      "optional": true
-    },
-    "remark-cli": {
+    "markdownlint-cli2": {
       "optional": true
     }
   },
   "keywords": [
     "formatting",
-    "prettier",
+    "ultracite",
     "biome",
-    "eslint",
-    "remark",
-    "config",
+    "prettier",
+    "markdownlint",
+    "editorconfig",
     "setup",
+    "init",
     "outfitter"
   ],
   "author": "Outfitter",
