--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,23 +4,13 @@
     "**/dist": true,
     "**/.DS_Store": true,
     "**/*.tsbuildinfo": true,
-    ".git": true,
-    ".pnpm-store": true,
-    "prettier.config.js": true,
-    "tsconfig.json": true,
-    "pnpm-workspace.yaml": true,
-    ".markdownlint-cli2.yaml": true,
-    ".gitignore": true,
-    "commitlint.config.js": true,
-    "eslint.config.js": true,
-    "lint-staged.config.js": true,
-    "vitest.config.ts": true,
-    "vitest.workspace.ts": true
+    ".git": true
   },
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "package.json": "pnpm-workspace.yaml,tsconfig.json,prettier.config.js,.markdownlint-cli2.yaml,.gitignore,commitlint.config.js,eslint.config.js,lint-staged.config.js,vitest.config.ts,vitest.workspace.ts,pnpm-lock.yaml"
+    "package.json": "pnpm-workspace.yaml,tsconfig.json,prettier.config.js,.markdownlint-cli2.yaml,.gitignore,commitlint.config.js,eslint.config.js,lint-staged.config.js,vitest.config.ts,vitest.workspace.ts,pnpm-lock.yaml,lint-staged.config.mjs,biome.json,eslint.config.mjs,.markdownlint.json,.prettierignore,.biomeignore,commitlint.config.mjs,prettier.config.ts",
+    "AGENT.md": ".mcp.json,CLAUDE.md"
   },
   "typescript.preferences.includePackageJsonAutoImports": "auto",
   "typescript.suggest.autoImports": true,
