chore: prepare for Bun migration and update tooling
- Remove Prettier configuration (replaced by Biome/Ultracite)
- Add markdownlint-cli2 configuration with proper format
- Update VS Code settings for new tooling
- Add lefthook configuration for git hooks
- Create prettier-backup.md for reference
- Add AI assistant configuration files (.claude, .cursor)
- Update Bun migration analysis document
- Add bun.lock file (pre-migration)
- Update package.json with Biome and Ultracite
- Remove ESLint configuration (replaced by Biome)

This commit saves the current state before completing the full Bun migration.
No secrets or sensitive data included.

--- a/biome.json
+++ b/biome.json
@@ -1,73 +1,9 @@
 {
-  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "root": true,
-  "vcs": {
-    "enabled": true,
-    "clientKind": "git",
-    "defaultBranch": "main",
-    "useIgnoreFile": true
-  },
-  "formatter": {
-    "enabled": true,
-    "formatWithErrors": false,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineEnding": "lf",
-    "lineWidth": 100
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "suspicious": {
-        "noExplicitAny": "warn",
-        "noConsole": "off",
-        "noArrayIndexKey": "warn",
-        "noAssignInExpressions": "warn"
-      },
-      "style": {
-        "noParameterAssign": "error",
-        "useConst": "error"
-      },
-      "complexity": {
-        "noBannedTypes": "error",
-        "noUselessConstructor": "error"
-      },
-      "correctness": {
-        "noUnusedVariables": "warn",
-        "noUnusedFunctionParameters": "warn"
-      },
-      "performance": {
-        "noAccumulatingSpread": "error",
-        "noDelete": "error"
-      },
-      "security": {
-        "noDangerouslySetInnerHtml": "error"
-      },
-      "nursery": {}
-    }
-  },
-  "javascript": {
-    "formatter": {
-      "jsxQuoteStyle": "double",
-      "quoteProperties": "asNeeded",
-      "quoteStyle": "single",
-      "semicolons": "always",
-      "trailingCommas": "all",
-      "arrowParentheses": "always"
-    },
-    "parser": {
-      "unsafeParameterDecoratorsEnabled": true
-    }
-  },
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "extends": ["ultracite"],
   "json": {
     "parser": {
-      "allowComments": true,
-      "allowTrailingCommas": true
+      "allowComments": true
     }
-  },
-  "files": {
-    "maxSize": 1048576,
-    "ignoreUnknown": false
   }
 }
