--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,17 +9,18 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "package.json": "pnpm-workspace.yaml,tsconfig.json,prettier.config.js,.markdownlint-cli2.yaml,.gitignore,commitlint.config.js,eslint.config.js,lint-staged.config.js,vitest.config.ts,vitest.workspace.ts,pnpm-lock.yaml,lint-staged.config.mjs,biome.json,eslint.config.mjs,.markdownlint.json,.prettierignore,.biomeignore,commitlint.config.mjs,prettier.config.ts",
+    "package.json": "pnpm-workspace.yaml,tsconfig.json,prettier.config.js,.markdownlint-cli2.jsonc,.gitignore,commitlint.config.js,eslint.config.js,lint-staged.config.js,vitest.config.ts,vitest.workspace.ts,pnpm-lock.yaml,lint-staged.config.mjs,biome.json,eslint.config.mjs,.markdownlint.json,.prettierignore,.biomeignore,commitlint.config.mjs,prettier.config.ts",
     "AGENT.md": ".mcp.json,CLAUDE.md"
   },
   "typescript.preferences.includePackageJsonAutoImports": "auto",
   "typescript.suggest.autoImports": true,
   "biome.enabled": true,
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "biomejs.biome",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "quickfix.biome": "explicit",
-    "source.organizeImports.biome": "explicit"
+    "source.organizeImports.biome": "explicit",
+    "source.fixAll.biome": "explicit"
   },
   "[javascript]": {
     "editor.defaultFormatter": "biomejs.biome"
@@ -61,5 +62,11 @@
     "**/.git": true,
     "**/coverage": true,
     "**/*.tsbuildinfo": true
-  }
+  },
+  "[javascript][typescript][javascriptreact][typescriptreact][json][jsonc][css][graphql]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "editor.formatOnPaste": true,
+  "emmet.showExpandedAbbreviation": "never"
 }
