--- a/biome.json
+++ b/biome.json
@@ -3,7 +3,8 @@
   "extends": ["ultracite"],
   "json": {
     "parser": {
-      "allowComments": true
+      "allowComments": true,
+      "allowTrailingCommas": true
     }
   }
 }
