--- a/package.json
+++ b/package.json
@@ -5,48 +5,50 @@
   "private": true,
   "engines": {
     "node": ">=20",
-    "pnpm": ">=9"
+    "bun": ">=1.2.0"
   },
-  "packageManager": "pnpm@10.11.1",
+  "packageManager": "bun@1.2.19",
+  "workspaces": [
+    "packages/*",
+    "packages/contracts/*",
+    "shared"
+  ],
   "scripts": {
-    "dev": "pnpm run --parallel --filter='./packages/*' dev",
-    "build": "pnpm run --filter='./packages/contracts/typescript' build && pnpm run --filter='./packages/*' build",
-    "test": "vitest",
-    "lint": "biome lint . && eslint . --config=./packages/biome-config/eslint-bridge.config.js --max-warnings 0",
-    "lint:fix": "biome lint . --write && eslint . --fix --config=./packages/biome-config/eslint-bridge.config.js",
+    "dev": "echo 'Use bun run dev in specific package directory'",
+    "build": "bun run -F '@outfitter/contracts' build && bun run -F '@outfitter/*' build",
+    "build:all": "bun run -F '@outfitter/*' build",
+    "test:all": "bun run -F '@outfitter/*' test",
+    "test": "bun test",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint . --write",
     "lint:md": "markdownlint-cli2 .",
-    "format": "biome format . && prettier --check . --ignore-path .prettierignore",
-    "format:fix": "biome format . --write && prettier --write . --ignore-path .prettierignore",
+    "format": "biome format .",
+    "format:fix": "biome format . --write",
     "type-check": "tsc --noEmit",
-    "check": "biome check . --write && eslint . --fix --config=./packages/biome-config/eslint-bridge.config.js",
-    "check:ci": "biome check . && eslint . --config=./packages/biome-config/eslint-bridge.config.js --max-warnings 0",
-    "ci": "pnpm run format && pnpm run lint && pnpm run lint:md && pnpm run type-check && pnpm run test --run",
-    "ci:local": "pnpm run format:fix && pnpm run lint && pnpm run lint:md && pnpm run type-check && pnpm run test --run",
+    "check": "biome check . --write",
+    "check:ci": "biome check .",
+    "ci": "bun run format && bun run lint && bun run lint:md && bun run type-check && bun test",
+    "ci:local": "bun run format:fix && bun run lint && bun run lint:md && bun run type-check && bun test",
     "changeset": "changeset",
     "changeset:version": "changeset version",
     "changeset:publish": "changeset publish",
-    "check:all": "pnpm run format && pnpm run lint && pnpm run lint:md && pnpm run type-check",
-    "config:mdlint": "node ./scripts/generate-mdlint-config.mjs",
-    "check:imports": "tsx ./scripts/check-contracts-imports.ts",
-    "prepare": "husky && pnpm config:mdlint"
+    "check:all": "bun run format && bun run lint && bun run lint:md && bun run type-check",
+    "config:mdlint": "bun ./scripts/generate-mdlint-config.mjs",
+    "check:imports": "bun ./scripts/check-contracts-imports.ts",
+    "prepare": "lefthook install && bun config:mdlint"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
     "@changesets/cli": "^2.27.1",
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
     "@types/glob": "^8.1.0",
     "@types/node": "^20.10.4",
     "glob": "^11.0.2",
-    "husky": "^8.0.3",
     "lefthook": "^1.12.2",
-    "lint-staged": "^15.2.0",
     "markdownlint-cli2": "^0.15.0",
-    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "8.33.1",
     "ultracite": "5.0.47",
-    "vitest": "^1.6.1"
+    "vitest": "^1.6.1",
+    "@types/bun": "latest"
   },
   "license": "MIT",
   "repository": {
