--- a/packages/biome-config/package.json
+++ b/packages/biome-config/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "description": "Shared Biome configuration for the Outfitter monorepo, with an ESLint bridge for gap coverage.",
+  "description": "Shared Biome configuration for the Outfitter monorepo.",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -17,30 +17,22 @@
   },
   "files": [
     "dist",
-    "biome.config.json",
-    "eslint-bridge.config.js"
+    "biome.config.json"
   ],
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
     "type-check": "tsc --noEmit",
     "test": "vitest",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "bun run build"
   },
-  "dependencies": {
-    "@eslint/js": "^9.2.0",
-    "eslint-config-biome": "^1.9.4",
-    "typescript-eslint": "^7.11.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@outfitter/typescript-config": "workspace:*",
     "@types/node": "^22.7.4",
     "tsup": "^8.3.0",
     "typescript": "^5.6.3",
     "vitest": "^2.1.5"
-  },
-  "peerDependencies": {
-    "eslint": "^9.2.0"
   },
   "keywords": [
     "biome",
