--- a/packages/rightdown/package.json
+++ b/packages/rightdown/package.json
@@ -26,7 +26,7 @@
     "dev": "tsup --watch",
     "type-check": "tsc --noEmit",
     "test": "vitest",
-    "prepublishOnly": "pnpm run build"
+    "prepublishOnly": "bun run build"
   },
   "dependencies": {
     "@outfitter/contracts": "workspace:*",
