feat(hooks): replace husky with lefthook configuration
- Create .lefthook.yml with pre-commit, commit-msg, and pre-push hooks
- Pre-commit: biome formatting for JS/TS/JSON files, prettier + markdownlint for markdown
- Commit-msg: commitlint validation
- Pre-push: type-check and test with turbo --affected
- Remove old lint-staged configuration
- Configure stage_fixed for automatic file staging after formatting

--- a/package.json
+++ b/package.json
@@ -40,15 +40,20 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
     "@changesets/cli": "^2.27.1",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/bun": "latest",
     "@types/glob": "^8.1.0",
     "@types/node": "^20.10.4",
     "glob": "^11.0.2",
     "lefthook": "^1.12.2",
     "markdownlint-cli2": "^0.15.0",
+    "postcss": "^8.5.6",
+    "stylelint": "^16.22.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
+    "turbo": "^2.5.5",
     "typescript": "^5.8.3",
     "ultracite": "5.0.47",
-    "vitest": "^1.6.1",
-    "@types/bun": "latest"
+    "vitest": "^1.6.1"
   },
   "license": "MIT",
   "repository": {
