chore(hooks): fix ultracite flag and scope markdownlint to staged files
- Remove unsupported `--write` flag from `ultracite format` in pre-commit
- Run markdownlint-cli2 with --fix on staged files only (pipe staged list)
- Keep Prettier write for staged Markdown to auto-fix before linting

This reduces hook noise and prevents pre-commit failures unrelated to current changes.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,13 +7,13 @@ pre-commit:
       run: bunx ultracite lint {staged_files}
     ultracite-format:
       glob: "*.{js,ts,jsx,tsx}"
-      run: bunx ultracite format --write {staged_files}
+      run: bunx ultracite format {staged_files}
       stage_fixed: true
     markdown:
       glob: "*.md"
       run: |
         bunx prettier --write {staged_files} &&
-        bunx markdownlint-cli2 {staged_files}
+        printf '%s\n' {staged_files} | bunx markdownlint-cli2 --fix
       stage_fixed: true
 
 commit-msg:
