--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -37,6 +37,6 @@
     "**/CHANGELOG.md",
     "**/*.min.md"
   ],
-  "fix": false,
+  "fix": true,
   "outputFormatters": [["markdownlint-cli2-formatter-default"]]
 }
