--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,8 @@ pre-commit:
   commands:
     ultracite-lint:
       glob: "*.{js,ts,jsx,tsx}"
-      run: bunx ultracite lint {staged_files}
+      run: bunx ultracite lint --fix {staged_files}
+      stage_fixed: true
     ultracite-format:
       glob: "*.{js,ts,jsx,tsx}"
       run: bunx ultracite format {staged_files}
