fix(markdownlint): scope file matching to args only; keep staged-only hook

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -27,7 +27,7 @@
       "style": "fenced"
     }
   },
-  "globs": ["**/*.md", "**/*.mdx", "**/*.mdc"],
+  "globs": [],
   "ignores": [
     "**/node_modules",
     "**/.git",
