fix: use npx tsc for type-check scripts to resolve bunx path issues

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,7 +14,7 @@
     "build": "npx tsc",
     "dev": "bun src/index.ts",
     "test": "bun test",
-    "type-check": "bunx tsc --noEmit",
+    "type-check": "npx tsc --noEmit",
     "prepare": "bun run build"
   },
   "dependencies": {
