feat: add comprehensive setup script for development environment (#90)
feat: add comprehensive setup script for development environment

- Add scripts/setup.sh with automated environment setup
- Install and verify all required development tools
- Add bun run setup command to package.json
- Update README with quick start instructions
- Update ultracite to latest version (5.2.5) across packages
- Improve developer onboarding experience

The setup script handles:

- Node.js version validation
- Bun installation if missing
- Global tool installation (Wrangler, Graphite CLI, etc.)
- Project dependency installation
- direnv configuration
- Setup verification with helpful output

fix: use bunx turbo in pre-push hooks

- Fix pre-push hooks to use bunx turbo instead of global turbo
- Ensures hooks work when turbo is installed locally via bun

--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,5 +1,6 @@
 # Bun configuration for @outfitter/monorepo
 # https://bun.sh/docs/runtime/configuration
+# Optimized for both local development and remote agent environments
 
 [install]
 # Match pnpm's behavior for workspace packages
