--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,10 +11,10 @@
     "templates"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "bunx tsc",
     "dev": "bun src/index.ts",
     "test": "bun test",
-    "type-check": "tsc --noEmit",
+    "type-check": "bunx tsc --noEmit",
     "prepare": "bun run build"
   },
   "dependencies": {
